Fix Homepage Links
Fixed internal links on homepage for calendar events and projects having an extra leading slash. Added more padding between calendar events. Fixed responsive issue on mobile when links were too long. Improved padding and positioning of calendar events and projects.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,6 +56,12 @@ a {
   transition-duration: 100ms;
 }
 
+@media (max-width: 640px) {
+  a {
+    word-break: break-all;
+  }
+}
+
 a:hover {
   text-decoration-line: none;
   color: #69443B;
